// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Badge control 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  counter={1}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="topRight"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Badge"
  onClick={[Function]}
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "red",
    }
  }
  suppress={true}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-badge-container"
  >
    Test Component
    <styled.div
      className="ui-badge test-class"
      disabled={false}
      location="topRight"
      onClick={[Function]}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "blue",
          "border": "solid 0.125em",
          "color": "red",
        }
      }
      visible={true}
    >
      1
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test making the Badge control invisible 1`] = `
<Wrapper
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  counter={0}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="topRight"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Badge"
  onClick={[Function]}
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "white",
      "border": "solid 0.125em",
      "color": "red",
    }
  }
  suppress={false}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-badge-container"
  />
</Wrapper>
`;

exports[`Test retrieval of Badge props object 1`] = `
Object {
  "bottom": null,
  "children": null,
  "className": null,
  "contentEditable": false,
  "controlled": true,
  "counter": 0,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "left": null,
  "location": "topRight",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "obj": "Badge",
  "onClick": [Function],
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "white",
    "border": "solid 0.125em",
    "color": "red",
  },
  "suppress": false,
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test the disabling of a Badge control 1`] = `
<Wrapper
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  counter={0}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="topRight"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Badge"
  onClick={[Function]}
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "white",
      "border": "solid 0.125em",
      "color": "red",
    }
  }
  suppress={false}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-badge-container"
  >
    <styled.div
      className="ui-badge"
      disabled={true}
      location="topRight"
      onClick={[Function]}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "white",
          "border": "solid 0.125em",
          "color": "red",
        }
      }
      visible={true}
    >
      0
    </styled.div>
  </styled.div>
</Wrapper>
`;
